--- a/app/src/main/res/drawable/shape_border.xml
+++ b/app/src/main/res/drawable/shape_border.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <stroke
         android:width="5dp"
-        android:color="#00F" />
+        android:color="#FFFFFF" />
     <corners
         android:radius="10dp" />
 </shape>
