--- a/app/src/main/res/layout/init.xml
+++ b/app/src/main/res/layout/init.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageView3"
         android:layout_width="341dp"
         android:layout_height="223dp"
         android:scaleType="fitCenter"
@@ -36,6 +36,7 @@
         android:text="¿NUEVO INTENTO?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
