--- a/app/src/main/res/layout/activity_main_seconds.xml
+++ b/app/src/main/res/layout/activity_main_seconds.xml
@@ -34,7 +34,7 @@
         android:rotation="180"/>
 
     <Button
-        android:id="@+id/Inicio"
+        android:id="@+id/validar"
         android:layout_width="210dp"
         android:layout_height="66dp"
         android:layout_alignParentStart="true"
@@ -48,8 +48,34 @@
         android:enabled="false"
         android:text="VALIDAR FOTOS" />
 
+    <TextView
+        android:id="@+id/ubica_la_pa"
+        android:layout_width="match_parent"
+        android:layout_height="332dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="149dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="179dp"
+        android:gravity="center_horizontal|top"
+        android:lineSpacingExtra="0sp"
+        android:rotation="90"
+        android:text="Ubica la parte Trasera de tu documento y toca la pantalla"
+        android:translationY="-0.19sp" />
 
-
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="570dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="66dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginBottom="19dp"
+        android:alpha="0.3"
+         app:srcCompat="@drawable/barcode3x" />
 
 
 </RelativeLayout>
