--- a/app/src/main/res/layout/activity_main_seconds.xml
+++ b/app/src/main/res/layout/activity_main_seconds.xml
@@ -20,62 +20,74 @@
 
     <View
         android:id="@+id/documentView"
-        android:layout_width="638px"
-        android:layout_height="491dp"
+        android:layout_width="wrap_content"
+        android:layout_height="650dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="29dp"
         android:layout_marginBottom="84dp"
         android:background="@drawable/shape_border"
-        android:rotation="180"/>
+        android:rotation="180" />
+
 
     <Button
         android:id="@+id/validar"
-        android:layout_width="210dp"
-        android:layout_height="66dp"
+        android:layout_width="324dp"
+        android:layout_height="69dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="102dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginBottom="57dp"
+        android:background="@drawable/radius"
         android:enabled="false"
-        android:text="VALIDAR FOTOS" />
+        android:text="VALIDAR FOTOS"
+        android:textColor="@color/white" />
 
-    <TextView
-        android:id="@+id/ubica_la_pa"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="332dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="149dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="179dp"
-        android:gravity="center_horizontal|top"
-        android:lineSpacingExtra="0sp"
-        android:rotation="90"
-        android:text="Ubica la parte Trasera de tu documento y toca la pantalla"
-        android:translationY="-0.19sp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_gravity="center">
+
+        <TextView
+            android:id="@+id/ub_ca_la_pa"
+            android:layout_width="347dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="140dp"
+            android:background="@drawable/radius"
+            android:gravity="center_horizontal|top"
+            android:lineSpacingExtra="0sp"
+            android:rotation="-270"
+            android:text="Ubíca la parte trasera de tu cédula y la detectaremos"
+            android:textColor="@color/white"
+            android:translationY="-0.19sp" />
+
+    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
-        android:layout_height="570dp"
+        android:layout_height="432dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="238dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="135dp"
+        android:layout_marginEnd="211dp"
+        android:layout_marginBottom="146dp"
         android:alpha="0.3"
-         app:srcCompat="@drawable/barcode3x" />
+        app:srcCompat="@drawable/barcode3x" />
 
 
 </RelativeLayout>
